:wrench: Fix missing space between sidebar tabs

--- a/resources/gui/css/sidebar.css
+++ b/resources/gui/css/sidebar.css
@@ -32,6 +32,10 @@
   display: none;
 }
 
+#sidebar .sidebar-tab {
+  margin-bottom: 10px;
+}
+
 #sidebar .tab {
   color: #fff;
   background-color: rgba(0, 0, 0, 0.5);
